edit overflow issue and add model

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ font-family: 'Julius Sans One', sans-serif !important;
 }
 .container-fluid{
   height: 100% !important;
-   overflow: hidden;
+  overflow: hidden;
+
 }
 button, input{
 font-family: 'Julius Sans One', sans-serif !important;
@@ -74,8 +75,7 @@ h2 {
 #map {
   width: 100%;
   height: 100%;
-   overflow: hidden;
-}
+  }
 
 .search-box-wrapper {
   position: absolute;
@@ -235,7 +235,9 @@ i{
 }
 /* 7. Responsive */
 @media (max-width: 767px) {
-
+.container-fluid{
+  overflow: visible;
+}
   .form-map {
     background-color: transparent !important;
     padding: 0 !important;
